# comp-air

./: .gitignore  README.md  compair_noc_driver.py  compair_perf_pipeline.py  compair_row_isa.py  requirements.txt  run.sh  setenv.sh
booksim2/: README.md
booksim2/api/: CMakeLists.txt  booksim_async.py  booksim_sync.py  lockfree_queue.hpp  top.cpp  top.hpp
booksim2/example/: _booksim_path.py  broadcast.py  broadcast_base.py  exp.py  exp_base.py  reduce.py  reduce_base.py  rmsnorm.py  rope.py  scalar.py  softmax.py  sqrt.py  sqrt_base.py
booksim2/src/: batchtrafficmanager.cpp  batchtrafficmanager.hpp  booksim_config.cpp  buffer.hpp  compair.hpp  config_utils.cpp  flit.cpp  flit.hpp  lex.yy.c  module.hpp  routefunc.cpp  simulatetrafficmanager.cpp  simulatetrafficmanager.hpp  steadystatetrafficmanager.cpp  steadystatetrafficmanager.hpp  synthetictrafficmanager.cpp  traffic.cpp  trafficmanager.cpp  trafficmanager.hpp  vc.cpp  vc.hpp  workload.cpp  workload.hpp  workloadtrafficmanager.cpp  workloadtrafficmanager.hpp
booksim2/src/examples/: flatfly_batch.config  flatfly_power.config  mesh88_batch.config  mesh88_simulate.config  mesh88_simulate.trace  mesh88_workload.config
booksim2/src/netrace/: netrace.c
booksim2/src/networks/: network.cpp  network.hpp
booksim2/src/routers/: iq_router.cpp  iq_router.hpp  router.cpp
cent_pim/: api.py
cent_pim/aim_simulator/: CMakeLists.txt
cent_pim/aim_simulator/src/: main.cpp
cent_pim/aim_simulator/src/base/: CMakeLists.txt  aim_globals.cpp  param.h
cent_pim/cent_simulation/: GPT.py  Llama.py  TransformerBlock.py  cent_power_calculator.py  cxl_latency.py  function_sim.py  offload_recorder.py  process_results.sh  run_sim.py  scaling_study_various_DP.py  simulation.sh  trace_paths.py  utils.py
cent_pim/trace/: .gitignore
sram_pim/: ana_eval.py  api.py  attention.py  attentionB.py  attentionQK.py  attentionSV.py  dse.py  opt.py  reorgnize.py
translate/: README.md  row_to_packet.py
